# concurrency-course-coding-2025-

./: README.md
cw/: run.sh
cw/scripts/: check_build.sh  run_extra_tests.sh
cw/src/: hash_set_coarse_grained.h  hash_set_refinable.h  hash_set_sequential.h  hash_set_striped.h
cw/tests/: hash_set_tests.cc
lectures/2a/: CMakeLists.txt
lectures/2a/src/: 1_hello_threads.cc  2_hello_threads_vector.cc  3_hello_threads_vector_id_chatty.cc  4_logger_class_mutex.cc  5_logger_bad_bounded_string_race.cc  6_logger_bad_bounded_string_deadlock.cc  7_logger_with_our_scoped_lock.cc  8_logger_with_std_scoped_lock.cc  9_data_race_and_compiler_optimization.cc  playground.cc
lectures/2b/: CMakeLists.txt
lectures/2b/src/: 1_concurrent_find.cc  2_store_buffering.cc  3_concurrent_find_relaxed.cc  playground.cc
lectures/3a/: CMakeLists.txt
lectures/3a/scripts/: check_build.sh  check_release_build.sh
lectures/3a/src/spinlocks/: demo_spinlocks.cc  spin_lock_active_backoff.h  spin_lock_exponential_backoff.h  spin_lock_local_spinning.h  spin_lock_passive_backoff.h  spin_lock_simple.h  spin_lock_ticket.h
lectures/3b/: CMakeLists.txt
lectures/3b/scripts/: check_release_build.sh
lectures/3b/src/futexes/: demo_futexes.cc  mutex_hybrid.h  mutex_semaphore.h  mutex_simple.h  mutex_smart.h  mutex_spinning.h
lectures/4a/: .gitignore  1_hello_threads.hs  2_no_join_threads.hs  3_join_threads.hs  4_mvar_as_mutex.hs  5_producer_consumer.hs  6_producer_consumer_parameterised.hs  7_nondeterministic_list.hs  7_unbounded_channels.hs
lectures/4b/: 1_hello_threads.rs  2_vector_sum_bad.rs  3_vector_sum.rs  4_vector_sum_with_atomic.rs  5_scoped_threads.rs
lectures/5/: vc_race_detection.py
tutorials/tutorial1/: CMakeLists.txt
tutorials/tutorial1/src/fifo/: lecture_fifo.cc  one_cv_fifo.cc
tutorials/tutorial1/src/histograms/: demo_histograms.cc
tutorials/tutorial1/src/random_sets/: demo_random_sets.cc
tutorials/tutorial1/src/recursive_mutex/: container.h  recursive_mutex.h
tutorials/tutorial1/src/shared_mutexes/: demo_shared_mutexes.cc  shared_mutex_base.h  shared_mutex_fair.h  shared_mutex_native.h  shared_mutex_simple.h  shared_mutex_stupid.h
tutorials/tutorial2/: CMakeLists.txt
tutorials/tutorial2/src/repeatedblur/: demo_repeated_blur.cc  sense_reversing_barrier.h  sense_reversing_barrier_no_tls.h
tutorials/tutorial2/src/spinlocks/: demo_spinlocks.cc  spin_lock_active_backoff.h  spin_lock_active_backoff_weaker_orderings.h  spin_lock_alock_false_sharing.h  spin_lock_alock_padded.h  spin_lock_exponential_backoff.h  spin_lock_local_spinning.h  spin_lock_passive_backoff.h  spin_lock_simple.h  spin_lock_simple_relaxed.h  spin_lock_ticket.h  spin_lock_ticket_nonatomic.h  spin_lock_ticket_optimised.h  spin_lock_ticket_volatile.h
